<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/main_premium"
        android:icon="@drawable/ic_baseline_navigate_before_24"
        android:title="@string/main_premium" />

    <item
        android:id="@+id/main_info_change"
        android:icon="@drawable/ic_baseline_navigate_before_24"
        android:title="@string/main_info_change" />

    <item
        android:id="@+id/main_help"
        android:icon="@drawable/ic_baseline_navigate_before_24"
        android:title="@string/main_help"/>

    <item
        android:id="@+id/main_logout"
        android:icon="@drawable/ic_baseline_navigate_before_24"
        android:title="@string/main_logout"/>
</menu>